# bachelor-courses

./: .gitignore  README.md
Cpp-Course/: README.md
Labs/: .gitignore  README.md
ML/: README.md
Paradigms/: .gitignore  README.md
functional-programming/hw1-Danielto1404/: LICENSE  README.md  hw1-Danielto1404.cabal
functional-programming/hw1-Danielto1404/src/: NonEmpty.hs
functional-programming/hw1-Danielto1404/src/FirstBlock/: Nat.hs  Tree.hs  Weekday.hs
functional-programming/hw1-Danielto1404/src/SecondBlock/: FoldableTree.hs  Split.hs
functional-programming/hw1-Danielto1404/src/ThirdBlock/: MaybeEitherConcat.hs  NameEndo.hs  ThisOrThat.hs
functional-programming/hw1-Danielto1404/test/: Main.hs
functional-programming/hw1-Danielto1404/test/FirstBlock/: NatProp.hs  NatSpec.hs  TreeSpec.hs  WeekdaySpec.hs
functional-programming/hw1-Danielto1404/test/SecondBlock/: FoldableTreeProp.hs  SplitProp.hs  SplitSpec.hs
functional-programming/hw1-Danielto1404/test/ThirdBlock/: MaybeEitherConcatSpec.hs  NameEndoSpec.hs  ThisOrThatSpec.hs
functional-programming/hw2-Danielto1404/: README.md  hw2-Danielto1404.cabal  stack.yaml
functional-programming/hw2-Danielto1404/src/FirstBlock/: NonEmpty.hs  StringSum.hs  Tree.hs
functional-programming/hw2-Danielto1404/src/SecondBlock/: Expression.hs  Moving.hs
functional-programming/hw2-Danielto1404/src/ThirdBlock/: BasicParsers.hs  BracketsParser.hs  ListParser.hs  NumberParser.hs  Parser.hs
functional-programming/hw2-Danielto1404/test/: Main.hs
functional-programming/hw2-Danielto1404/test/FirstBlock/: StringSumSpec.hs
functional-programming/hw2-Danielto1404/test/SecondBlock/: ExpressionSpec.hs
functional-programming/hw2-Danielto1404/test/ThirdBlock/: ParserSpec.hs
functional-programming/hw3-Danielto1404/: README.md  filemanager  hw3-Danielto1404.cabal  run.sh  stack.yaml
functional-programming/hw3-Danielto1404/.stack-work/: stack.sqlite3
functional-programming/hw3-Danielto1404/.stack-work/install/x86_64-osx/8f860404649a74cdb138ebde489fbf10f69ea7393e34747b82da955faa972fb6/8.8.3/pkgdb/: hw3-Danielto1404-0.1.0.0-2Lwkpvp7vO8GOTtLpWEwSt.conf  package.cache
functional-programming/hw3-Danielto1404/app/: Main.hs
functional-programming/hw3-Danielto1404/src/Command/: Command.hs  Handler.hs  StartOption.hs
functional-programming/hw3-Danielto1404/src/FileSystem/: FSActions.hs  FSActionsIO.hs  FSActionsVirtual.hs  FSEnviroment.hs  FSException.hs  VirtualFS.hs
functional-programming/hw3-Danielto1404/src/Parser/: CommandParser.hs  RunParser.hs  StartOptionParser.hs
functional-programming/hw3-Danielto1404/src/Utils/: Path.hs  RainbowText.hs  Time.hs
functional-programming/hw3-Danielto1404/test/: Main.hs
functional-programming/hw3-Danielto1404/test/FS/: FSExample.hs  VirtualFSSpec.hs
functional-programming/hw4-Danielto1404/comonad19/: README.md  comonad19.cabal
functional-programming/hw4-Danielto1404/comonad19/.stack-work/: stack.sqlite3
functional-programming/hw4-Danielto1404/comonad19/.stack-work/ghci/566cf7e5/: cabal_macros.h
functional-programming/hw4-Danielto1404/comonad19/.stack-work/ghci/c6f4d6d6/: cabal_macros.h
functional-programming/hw4-Danielto1404/comonad19/.stack-work/install/x86_64-osx/8f860404649a74cdb138ebde489fbf10f69ea7393e34747b82da955faa972fb6/8.8.3/pkgdb/: package.cache
functional-programming/hw4-Danielto1404/comonad19/app/: Main.hs
functional-programming/hw4-Danielto1404/comonad19/src/: Grid.hs  ListZipper.hs
functional-programming/hw4-Danielto1404/comonad19/src/Virus/: Configuration.hs  Simulation.hs
functional-programming/hw4-Danielto1404/file-system/: README.md  file-system.cabal
functional-programming/hw4-Danielto1404/file-system/.stack-work/: stack.sqlite3
functional-programming/hw4-Danielto1404/file-system/.stack-work/ghci/140829e5/: cabal_macros.h
functional-programming/hw4-Danielto1404/file-system/.stack-work/ghci/585aa98c/: cabal_macros.h
functional-programming/hw4-Danielto1404/file-system/.stack-work/ghci/92f01f5b/: cabal_macros.h
functional-programming/hw4-Danielto1404/file-system/.stack-work/ghci/cec1028a/: cabal_macros.h
functional-programming/hw4-Danielto1404/file-system/.stack-work/ghci/f6ab8d0f/: cabal_macros.h
functional-programming/hw4-Danielto1404/file-system/app/: Main.hs
functional-programming/hw4-Danielto1404/file-system/src/: FS.hs  FSLenses.hs  FSTraversal.hs
functional-programming/hw4-Danielto1404/file-system/test/: Main.hs  TestFS.hs
functional-programming/hw4-Danielto1404/geometry/: README.md  geometry.cabal
functional-programming/hw4-Danielto1404/geometry/.stack-work/: stack.sqlite3
functional-programming/hw4-Danielto1404/geometry/benchmark/: GeometryBench.hs  Main.hs
functional-programming/hw4-Danielto1404/geometry/src/: Geometry.hs
functional-programming/hw4-Danielto1404/hashtable/: README.md  hashtable.cabal  stack.yaml
functional-programming/hw4-Danielto1404/hashtable/.stack-work/: stack.sqlite3
functional-programming/hw4-Danielto1404/hashtable/.stack-work/ghci/0444cfb2/: cabal_macros.h
functional-programming/hw4-Danielto1404/hashtable/.stack-work/ghci/d0d39f41/: cabal_macros.h
functional-programming/hw4-Danielto1404/hashtable/.stack-work/ghci/df620090/: cabal_macros.h
functional-programming/hw4-Danielto1404/hashtable/benchmark/: Main.hs
functional-programming/hw4-Danielto1404/hashtable/src/: Hashtable.hs
functional-programming/hw4-Danielto1404/hashtable/test/: Main.hs
functional-programming/hw4-Danielto1404/integration/: README.md  integration.cabal  stack.yaml
functional-programming/hw4-Danielto1404/integration/.stack-work/: stack.sqlite3
functional-programming/hw4-Danielto1404/integration/app/: Main.hs
functional-programming/hw4-Danielto1404/integration/src/: Integration.hs
functional-programming/hw4-Danielto1404/script/: README.md  script.cabal  stack.yaml
functional-programming/hw4-Danielto1404/script/.stack-work/: stack.sqlite3
functional-programming/hw4-Danielto1404/script/app/: Main.hs
functional-programming/hw4-Danielto1404/script/src/: HSExpr.hs  Interpreter.hs  Transpiler.hs
(+1831 files in other folders)
