name:                hw2-Danielto1404
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/Danielto1404/fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Daniil Korolev
maintainer:          daniilkorolev00@gmail.com
copyright:           2020 Daniil Korolev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  exposed-modules:
      FirstBlock.NonEmpty
      , FirstBlock.StringSum
      , FirstBlock.Tree
      , SecondBlock.Expression
      , SecondBlock.Moving
      , ThirdBlock.Parser
      , ThirdBlock.BasicParsers
      , ThirdBlock.BracketsParser
      , ThirdBlock.NumberParser
      , ThirdBlock.ListParser
  hs-source-dirs:
      src

  ghc-options:
      -Wall
  build-depends:
      base >=4.7 && <5,
      mtl
  default-language: Haskell2010

test-suite HW02-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      FirstBlock.StringSumSpec
      , SecondBlock.ExpressionSpec
      , ThirdBlock.ParserSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hw2-Danielto1404
      , base >=4.7 && <5
      , hspec
      , hedgehog
      , hspec-hedgehog
      , tasty
      , tasty-hspec
      , tasty-hedgehog
  default-language: Haskell2010
