name:                hw3-Danielto1404
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/Danielto1404/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Daniil Korolev
maintainer:          daniilkorolev00@gmail.com
copyright:           2020 Daniil Korolev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1


executable hw3-Danielto1404
   hs-source-dirs:   src, app
   ghc-options:      -Wall -Wwarn
   main-is:          Main.hs
   other-modules:
         Command.Command
       , Command.Handler
       , Command.StartOption
       , FileSystem.FSActions
       , FileSystem.FSActionsIO
       , FileSystem.FSActionsVirtual
       , FileSystem.FSEnviroment
       , FileSystem.FSException
       , FileSystem.VirtualFS
       , Parser.CommandParser
       , Parser.RunParser
       , Parser.StartOptionParser
       , Utils.RainbowText
       , Utils.Path
       , Utils.Time
   build-depends:
         base >=4.7 && <5
       , mtl
       , transformers
       , optparse-applicative
       , directory
       , time
       , filepath
       , exceptions
       , extra
       , rainbow
       , text
   default-language: Haskell2010

library
  hs-source-dirs:
      src
  ghc-options:
      -Wall -Wwarn
  exposed-modules:
        Command.Command
      , Command.Handler
      , Command.StartOption
      , FileSystem.FSActions
      , FileSystem.FSActionsIO
      , FileSystem.FSActionsVirtual
      , FileSystem.FSEnviroment
      , FileSystem.FSException
      , FileSystem.VirtualFS
      , Parser.CommandParser
      , Parser.RunParser
      , Parser.StartOptionParser
      , Utils.RainbowText
      , Utils.Path
      , Utils.Time
  build-depends:
        base >=4.7 && <5
      , mtl
      , transformers
      , optparse-applicative
      , directory
      , time
      , filepath
      , exceptions
      , extra
      , rainbow
      , text
  default-language: Haskell2010

test-suite HW03-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      FS.FSExample
      FS.VirtualFSSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        hw3-Danielto1404
      , base >=4.7 && <5
      , mtl
      , transformers
      , time
      , directory
      , filepath
      , hspec
      , hedgehog
      , hspec-hedgehog
      , tasty
      , tasty-hspec
      , tasty-hedgehog
  default-language: Haskell2010
