cabal-version: 1.12

name:           comonad19
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Danielto1404/comonad19#readme>
homepage:       https://github.com/Danielto1404/comonad19#readme
bug-reports:    https://github.com/Danielto1404/comonad19/issues
author:         Daniil Korolev
maintainer:     daniilkorolev00@gmail.com
copyright:      2021 Daniil Korolev
build-type:     Simple

library
  exposed-modules:
      ListZipper
    , Grid
    , Virus.Configuration
    , Virus.Simulation
  other-modules:
      Paths_comonad19
  hs-source-dirs:
      src
  ghc-options: -Wall -Wwarn
  build-depends:
      base >=4.7 && <5
    , comonad
    , random
  default-language: Haskell2010

executable comonad19-exe
  main-is: Main.hs
  other-modules:
      Paths_comonad19
  hs-source-dirs:
      app
  ghc-options: -Wall -Wwarn -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , comonad19
    , process
  default-language: Haskell2010
