cabal-version: 1.12

name:           geometry
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Danielto1404/geometry#readme>
homepage:       https://github.com/Danielto1404/geometry#readme
bug-reports:    https://github.com/Danielto1404/geometry/issues
author:         Daniil Korolev
maintainer:     daniilkorolev00@gmail.com
copyright:      2021 Daniil Korolev
build-type:     Simple

library
  exposed-modules:
      Geometry
  hs-source-dirs:
      src
  ghc-options: -Wall -Wwarn
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

benchmark geometry-benchmark
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      benchmark
  ghc-options: -Wall -Wwarn -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:
      GeometryBench
  build-depends:
        base >= 4.7 && <5
      , geometry
      , criterion
      , deepseq
  default-language: Haskell2010
