cabal-version: 1.12

name:           hashtable
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Danielto1404/hashtable#readme>
homepage:       https://github.com/Danielto1404/hashtable#readme
bug-reports:    https://github.com/Danielto1404/hashtable/issues
author:         Daniil Korolev
maintainer:     daniilkorolev00@gmail.com
copyright:      2021 Daniil Korolev
build-type:     Simple

library
  exposed-modules:
      Hashtable
  hs-source-dirs:
      src
  ghc-options: -Wall -Wwarn
  build-depends:
      base >=4.7 && <5
    , vector
    , stm
    , hashable
  default-language: Haskell2010

test-suite hashtable-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wwarn -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hashtable
    , hspec
    , hedgehog
    , hspec-hedgehog
    , tasty
    , tasty-hspec
    , tasty-hedgehog
    , random
  default-language: Haskell2010

benchmark hashable-benchmark
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      benchmark
  ghc-options: -Wall -Wwarn -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        base >= 4.7 && <5
      , hashtable
      , async
      , hashable
      , criterion
      , deepseq
      , random
  default-language: Haskell2010
