cabal-version: 1.12

name:           integration
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Danielto1404/integration#readme>
homepage:       https://github.com/Danielto1404/integration#readme
bug-reports:    https://github.com/Danielto1404/integration/issues
author:         Daniil Korolev
maintainer:     daniilkorolev00@gmail.com
copyright:      2021 Daniil Korolev
build-type:     Simple

library
  exposed-modules:
      Integration
  hs-source-dirs:
      src
  ghc-options: -Wall -Wwarn
  build-depends:
      base >=4.7 && <5
    , parallel
    , random
  default-language: Haskell2010

executable integration-exe
  main-is: Main.hs
  other-modules:
      Paths_integration
  hs-source-dirs:
      app
  ghc-options: -Wall -Wwarn -O2 -threaded -rtsopts -with-rtsopts=-N6
  build-depends:
      base >=4.7 && <5
    , integration
  default-language: Haskell2010
